--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "C_Cpp.errorSquiggles": "Disabled",
     "files.associations": {
         "editview.h": "c",
-        "overview.h": "c"
+        "overview.h": "c",
+        "typeinfo": "c"
     }
 }
