Array sorting and string comparison
+ Added function that sorts the array of products based on their names
+ Added functions that make it easier to compare strings case insensitively - these are implemented

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
     "files.associations": {
         "editview.h": "c",
         "overview.h": "c",
-        "typeinfo": "c"
+        "typeinfo": "c",
+        "limits": "c",
+        "*.tcc": "c",
+        "math.h": "c"
     }
 }
