Made skipping time possible
+ Added functionality that lets the user skip time simulating how a potential salesday would go
+ Added the ability to reset the day
+ Made this new capability work with the saving mechanic
+ Changed variable names for the product struct
+ Changed time format to UNIX time
!!! Initiated trying  to make editView work
+ Added editView specific UI functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "typeinfo": "c",
         "limits": "c",
         "*.tcc": "c",
-        "math.h": "c"
+        "math.h": "c",
+        "time.h": "c"
     }
 }
