Created a lib file to store all the headers
- Added lib.h
- removed all unnecessary includes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "limits": "c",
         "*.tcc": "c",
         "math.h": "c",
-        "time.h": "c"
+        "time.h": "c",
+        "lib.h": "c"
     }
 }
